# Conway_game_of_life

./: CMakeLists.txt  Cell.cpp  Cell.h  DynamicGridtest.cpp  Game_of_life  Game_of_life.cpp  Game_of_life_S2.cpp  Grid.cpp  Grid.h  Makefile  README.md  Simulation.cpp  Simulation.h  Testgame.txt  Workflow.cpp  Workflow.h  components.cpp  components.h  main.cpp  new.txt  test.txt
Testfiles/: Pentadecathlon.txt  RandomGrid_1.pbm  RandomGrid_2.pbm  RandomGrid_3.pbm  RandomGrid_4.pbm  RandomGrid_5.pbm  Testfile.pbm  Testfile_1.pbm  Testfile_2.pbm  Testfile_3.pbm  Testfile_4.pbm  Testfile_5.pbm  Testfile_6.pbm  Testfile_7.pbm  Testfile_8.pbm  Testfile_9.pbm
